# autofocus

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/autofocus_cli/: CMakeLists.txt
evaluation/NikonD90/: NikonD90-50mm1.4G-.gnuplot  NikonD90-50mm1.4G-plant.data  NikonD90-50mm1.4G-tee.data  NikonD90-50mm1.4G-texture.data  NikonD90-50mm1.4G-texture_too_close.data  NikonD90-50mm1.4G-wall.data  NikonD90-50mm1.4G-window.data
scripts/: make_rate_fun_plot.sh
src/: CMakeLists.txt  autofocus.cpp
